minor changes, added timestamp to tweets

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -48,6 +48,10 @@
     <p><a href="./fetch.html" target="blank">Asincronía i recuperació de dades d'un servidor (<i>fetch</i> amb mètode GET)</a></p>
     <p><a href="./firebase.html" target="blank">Alta, baixa, modificació i consulta d'entrades a una base de dades (CRUD amb Firebase Realtime Database)</a></p>
     <p><a href="./twitter.html" target="blank">Exercici de lectura i escritura a una base de dades: Twitter Singulars</a></p>
+    <p><a href="./" target="blank">Alta, baixa, modificació i consulta: llista de la compra</a></p>
+    
+    <br><h3>Frameworks reactius amb VUE.js:</h3>
+    <p><a href="./" target="blank">Primers passos amb VUE.js</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
