primers exercicis amb VUE.js (formularis, templates, v-on i v-model)

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -51,7 +51,9 @@
     <p><a href="./" target="blank">Alta, baixa, modificació i consulta: llista de la compra</a></p>
     
     <br><h3>Frameworks reactius amb VUE.js:</h3>
-    <p><a href="./" target="blank">Primers passos amb VUE.js</a></p>
+    <p><a href="./vue/intro.html" target="blank">Primers passos amb VUE.js</a></p>
+    <p><a href="./vue/formulari_click.html" target="blank">Detectar un clic amb <i>v-on:click</i></a></p>
+    <p><a href="./vue/formulari_model.html" target="blank">Accedir als valors d'un formulari amb <i>v-model</i></a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
