--- a/javascript/vue/formulari_model.html
+++ b/javascript/vue/formulari_model.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulari VUE</title>
+    <title>Formulari model VUE</title>
     
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
@@ -40,7 +40,7 @@
                 tlf: ''
             },
             methods: {
-                enviar: function(){     // el mètode asigna valors a les propietats
+                enviar: function(){
                     console.log({
                         nom: this.nom,
                         cognom: this.cognom,
