formulari amb bind de classes

--- a/javascript/vue/formulari_if.html
+++ b/javascript/vue/formulari_if.html
@@ -26,7 +26,7 @@
             <i v-if="dirCorrect" style="color: green" class="fas fa-check"></i>
             <i v-else style="color: red; font-size: 1em;"  class="fas fa-times"></i><br><br>
 
-            <input type="number" placeholder="tlf" @keyup="checkTlf" v-model="temp_tlf">  
+            <input type="number" placeholder="telèfon" @keyup="checkTlf" v-model="temp_tlf">  
             <i v-if="tlfCorrect" style="color: green" class="fas fa-check"></i>
             <i v-else style="color: red; font-size: 1em;"  class="fas fa-times"></i><br><br>
             
