--- a/javascript/vue/formulari_model.html
+++ b/javascript/vue/formulari_model.html
@@ -16,7 +16,7 @@
             <input type="text" placeholder="nom" v-model="nom"><br><br>    <!-- l'atribut v-model enllaça una propietat amb un valor -->
             <input type="text" placeholder="cognom" v-model="cognom"><br><br>
             <input type="text" placeholder="direcció" v-model="dir"><br><br>
-            <input type="number" placeholder="tlf" v-model="tlf"><br><br>
+            <input type="number" placeholder="telèfon" v-model="tlf"><br><br>
             
             <button v-on:click='enviar'>Enviar</button><br><br>
             
