afegits exerciics als apunts

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -48,12 +48,14 @@
     <p><a href="./fetch.html" target="blank">Asincronía i recuperació de dades d'un servidor (<i>fetch</i> amb mètode GET)</a></p>
     <p><a href="./firebase.html" target="blank">Alta, baixa, modificació i consulta d'entrades a una base de dades (CRUD amb Firebase Realtime Database)</a></p>
     <p><a href="./twitter.html" target="blank">Exercici de lectura i escritura a una base de dades: Twitter Singulars</a></p>
-    <p><a href="./" target="blank">Alta, baixa, modificació i consulta: llista de la compra</a></p>
     
     <br><h3>Frameworks reactius amb VUE.js:</h3>
     <p><a href="./vue/intro.html" target="blank">Primers passos amb VUE.js</a></p>
     <p><a href="./vue/formulari_click.html" target="blank">Detectar un clic amb <i>v-on:click</i></a></p>
     <p><a href="./vue/formulari_model.html" target="blank">Accedir als valors d'un formulari amb <i>v-model</i></a></p>
+    <p><a href="./vue/formulari_if.html" target="blank">Validació de formularis i renderització condicional <i>v-if</i></a></p>
+    <p><a href="./vue/bind.html" target="blank">Vinculació d'atributs i classes amb <i>v-bind</i></a></p>
+    <p><a href="./vue/formulari_bind.html" target="blank">Validació de formularis amb vinculació de classes</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
