exercicis de vue: v-bind i v-for

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -54,8 +54,9 @@
     <p><a href="./vue/formulari_click.html" target="blank">Detectar un clic amb <i>v-on:click</i></a></p>
     <p><a href="./vue/formulari_model.html" target="blank">Accedir als valors d'un formulari amb <i>v-model</i></a></p>
     <p><a href="./vue/formulari_if.html" target="blank">Validació de formularis i renderització condicional <i>v-if</i></a></p>
-    <p><a href="./vue/bind.html" target="blank">Vinculació d'atributs i classes amb <i>v-bind</i></a></p>
+    <p><a href="./vue/vue_bind.html" target="blank">Vinculació d'atributs i classes amb <i>v-bind</i></a></p>
     <p><a href="./vue/formulari_bind.html" target="blank">Validació de formularis amb vinculació de classes</a></p>
+    <p><a href="./vue/vue_for.html" target="blank">Renderització de llistes amb <i>v-for</i></a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
