--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -57,6 +57,7 @@
     <p><a href="./vue/vue_bind.html" target="blank">Vinculació d'atributs i classes amb <i>v-bind</i></a></p>
     <p><a href="./vue/formulari_bind.html" target="blank">Validació de formularis amb vinculació de classes</a></p>
     <p><a href="./vue/vue_for.html" target="blank">Renderització de llistes amb <i>v-for</i></a></p>
+    <p><a href="./vue/components.html" target="blank">Components personalitzats i props</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
