--- a/html+css/sass/sassy.html
+++ b/html+css/sass/sassy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sassy.css">
+    <link rel="stylesheet" href="./css/sassy.css">
     <link rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/sass-1.svg" type="image/x-icon">
 
     <title>Sassy</title>
