--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -46,9 +46,10 @@
     <br><h3>Emmagatzematge i recuperació d'informació:</h3>
     <p><a href="./localstorage.html" target="blank">Emmagatzematge local d'informació (<i>local storage</i>)</a></p>
     <p><a href="./fetch.html" target="blank">Asincronía i recuperació de dades d'un servidor (<i>fetch</i> amb mètode GET)</a></p>
-    <p><a href="./firebase.html" target="blank">Alta, baixa, modificació i consulta d'entrades a una base de dades (CRUD amb Firebase Realtime Database)</a></p>
+    <p><a href="./crud_database.html" target="blank">Alta, baixa, modificació i consulta d'entrades a una base de dades (CRUD amb Firebase Realtime Database)</a></p>
     <p><a href="./twitter.html" target="blank">Exercici de lectura i escritura a una base de dades: Twitter Singulars</a></p>
-    
+    <p><a href="./firebase/firebase.html" target="blank">Exercici de pujada i baixada de imatges amb la API de Firebase</a></p>
+
     <br><h3>Frameworks reactius amb VUE.js:</h3>
     <p><a href="./vue/intro.html" target="blank">Primers passos amb VUE.js</a></p>
     <p><a href="./vue/formulari_click.html" target="blank">Detectar un clic amb <i>v-on:click</i></a></p>
