apunts actualitzats, exercici templates, vue common mistakes

--- a/html+css/apunts.html
+++ b/html+css/apunts.html
@@ -59,6 +59,10 @@
 
     <p><a href="./responsive/responsive-div.html">Arxiu de proves de <i>media queries</i></a></p>
 
+    <p><a href="./responsive/prova-bootstrap.html">Arxiu de proves de Bootstrap (framework de CSS)</a></p>
+
+    <p><a href="./responsive/tailwind.html">Arxiu de proves de Tailwind (framework de CSS)</a></p>
+
     <h6>&copy; Omar Olmedo Ferrer</h6>
 </body>
 </html>
