--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -59,6 +59,8 @@
     <p><a href="./vue/formulari_bind.html" target="blank">Validació de formularis amb vinculació de classes</a></p>
     <p><a href="./vue/vue_for.html" target="blank">Renderització de llistes amb <i>v-for</i></a></p>
     <p><a href="./vue/components.html" target="blank">Components personalitzats i props</a></p>
+    <p><a href="./vue/templates.html" target="blank">Manera alternativa de definir templates i props pels components</a></p>
+    <p><a href="./vue/vue_common_mistakes.html" target="blank">Errors habituals al barrejar Vue.js amb JavaScript</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
