creative commons license added

--- a/javascript/apunts.html
+++ b/javascript/apunts.html
@@ -60,7 +60,7 @@
     <p><a href="./vue/vue_for.html" target="blank">Renderització de llistes amb <i>v-for</i></a></p>
     <p><a href="./vue/components.html" target="blank">Components personalitzats i props</a></p>
     <p><a href="./vue/templates.html" target="blank">Manera alternativa de definir templates i props pels components</a></p>
-    <p><a href="./vue/vue_common_mistakes.html" target="blank">Errors habituals al barrejar Vue.js amb JavaScript</a></p>
+    <p><a href="./vue/vue_common_mistakes.html" target="blank">Errors habituals al barrejar Vue.js amb JavaScript. Gràfic de barres amb els resultats d'una empresa</a></p>
 
     <br><h3>Altres exercicis:</h3>
     <p><a href="./parallax.html" target="blank">Modificació de l'scroll d'una pàgina. Efecte parallax</a></p>
@@ -68,6 +68,6 @@
     <p><a href="./snap_scroll.html" target="blank">Snap scroll (scroll forçat a les seccions de la pàgina)</a></p>
     <p><a href="./smooth_scroll.html" target="blank">Smooth scroll (scroll suau entre seccions al clicar enllaços)</a></p>
 
-    <br><h6 title="això és un títol h6">&copy; Omar Olmedo Ferrer</h6>
+    <br><h6 title="això és un títol h6"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /> Omar Olmedo Ferrer</h6>
 </body>
 </html>
