arreglats errors d'enllaç d'imatges (TODO)

--- a/html+css/maquetacions/noticies.html
+++ b/html+css/maquetacions/noticies.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="./img/daily prophet.jpg" alt="Daily Prophet Header" width="1024px">
+        <img src="../img/daily prophet.jpg" alt="Daily Prophet Header" width="1024px">
     </div>
     
     <div class="news">
